[Task] Banner/notification on regular map
Task url - https://app.asana.com/0/680458161056001/681979960345449/f

- added a global notifications helper function to the map.js file
- updated the index.html file to call the new function
- updated the css with the new styles

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 
 <div class="wrapper">
 
-
 <header class="c-map-header" role="banner">
     <div class="o-wrapper o-wrapper--wide o-grid">
         <div class="o-grid__row">
@@ -152,5 +151,15 @@
 
 </div>
 
+
+<script>
+    uoy_map.addGlobalNotice({
+        placeBeforeElement: '.c-map-header',
+        title: '',
+        description: 'Here for Open Day? We\'ve got an <a href="https://www.york.ac.uk/map/open-day-map">Open Day Map</a> just for you',
+        noticeModifierClasses: 'c-global-notice--highlighted',
+        closeable: true
+    });
+</script>
 </body>
 </html>
