--- a/index.html
+++ b/index.html
@@ -17,22 +17,20 @@
     <link rel="stylesheet" href="css/snazzy-info-window.css">
     <link rel="stylesheet" href="css/map.css">
 
-    <script src="https://www.york.ac.uk/static/1.5/js/modernizr.min.js"></script>
-    <!-- <script src="js/app.min.js"></script> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.0.4/fuse.min.js"></script>
 
-    <script src="js/map.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBRU46Whb7IqeK2RW6SP4u69vDpCbTct8&libraries=places" ></script>
-    <script src="js/snazzy-info-window.js"></script>
-
     <!-- Typekit script -->
-    <script src="//use.typekit.net/dvj8rpp.js"></script>
     <script>
-        try {
-            Typekit.load();
-        } catch (e) {}
+        (function(d) {
+            var config = {
+                    kitId: 'dvj8rpp',
+                    scriptTimeout: 3000,
+                    async: true
+                },
+                h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+        })(document);
     </script>
 </head>
 <body>
@@ -152,14 +150,73 @@
 </div>
 
 
+
 <script>
-    uoy_map.addGlobalNotice({
-        placeBeforeElement: '.c-map-header',
-        title: '',
-        description: 'Here for Open Day? We\'ve got an <a href="https://www.york.ac.uk/map/open-day-map">Open Day Map</a> just for you',
-        noticeModifierClasses: 'c-global-notice--highlighted',
-        closeable: true
-    });
+
+    // helper script to load JS files dynamically
+    function loadJS(filename, onloadCallback) {
+        var fileref = document.createElement('script');
+        fileref.setAttribute("type", "text/javascript");
+        fileref.setAttribute("src", filename);
+        if(onloadCallback && onloadCallback != '') {
+            fileref.setAttribute("onload", onloadCallback);
+        }
+
+        if (typeof fileref!="undefined")
+            document.getElementsByTagName("head")[0].appendChild(fileref);
+    }
+
+    // callback function that is called on the 'callback' event by Google Maps API loader
+    // it essentially loads the other campus maps functionality asynchronously...of sorts
+    function initCampusMaps() {
+        // load our other scripts because we know the Google and Map objects are available
+        loadJS('/js/pointofinterest.js');
+        loadJS('/js/uoy-map.js', "initPostLoad()");
+        loadJS('/js/map.js');
+        loadJS('/js/snazzy-info-window.js');
+    }
+
+    function initPostLoad() {
+
+        // add the open day global notice
+        uoy_map.addGlobalNotice({
+            placeBeforeElement: '.c-map-header',
+            title: '',
+            description: 'Here for Open Day? We\'ve got an <a href="https://www.york.ac.uk/map/open-day-map">Open Day Map</a> just for you',
+            noticeModifierClasses: 'c-global-notice--highlighted',
+            closeable: true
+        });
+
+        // plot special markers for open day
+        uoy_map.setPointsOfInterest([
+            {
+                title: 'Piazza Building',
+                lat: 53.9476135,
+                lon: -1.0280116
+            },
+            {
+                title: 'Ron Cooke Hub',
+                lat: 53.947226,
+                lon: -1.0297289
+            },
+            {
+                title: 'Spring Lane Building',
+                lat: 53.9476566,
+                lon: -1.0511597
+            },
+            {
+                title: 'Central Hall',
+                lat: 53.9469181,
+                lon: -1.0529672
+            },
+            {
+                title: 'Exhibition Centre',
+                lat: 53.9462674,
+                lon: -1.0533276
+            }
+        ]);
+    }
 </script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBRU46Whb7IqeK2RW6SP4u69vDpCbTct8&libraries=places&callback=initCampusMaps" async defer></script>
 </body>
 </html>
