--- a/index.html
+++ b/index.html
@@ -124,23 +124,8 @@
     <div class="o-wrapper o-wrapper--wide o-grid panel">
       <div class="o-grid__row">
           <div class="o-grid__box o-grid__box--full">
-            <div class="c-btn-group c-btn-group--block">
-                <input type="checkbox" id="food-and-drink" name="mapButton" class="c-btn--selectable" value="Food and drink">
-                <label for="food-and-drink" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--coffee"></i>Food and drink</label>
-                <input type="checkbox" id="study-spaces" name="mapButton" class="c-btn--selectable" value="Study spaces">
-                <label for="study-spaces" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--book"></i>Study spaces</label>
-                <!--<input type="checkbox" id="printers" name="mapButton" class="c-btn--selectable" value="Printers">
-                <label for="printers" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--print"></i>Printers</label>-->
-                <input type="checkbox" id="shops" name="mapButton" class="c-btn--selectable" value="Shops">
-                <label for="shops" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--shopping-basket"></i>Shops</label>
-                <input type="checkbox" id="car-parks" name="mapButton" class="c-btn--selectable" value="Car parks">
-                <label for="car-parks" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--car"></i>Car parks</label>
-                <input type="checkbox" id="bus-stops" name="mapButton" class="c-btn--selectable" value="Bus stops">
-                <label for="bus-stops" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--bus"></i>Bus stops</label>
-                <input type="checkbox" id="cash-machines" name="mapButton" class="c-btn--selectable" value="Cash machines">
-                <label for="cash-machines" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--money"></i>Cash machines</label>
-                <input type="checkbox" id="post-boxes" name="mapButton" class="c-btn--selectable" value="Post boxes">
-                <label for="post-boxes" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--envelope"></i>Post boxes</label>
+            <div id="map-button-container" class="c-btn-group c-btn-group--block">
+                <!--This will be populated during map init-->
             </div>
         </div>
       </div>
@@ -152,7 +137,6 @@
 
 
 <script>
-
     // helper script to load JS files dynamically
     function loadJS(filename, onloadCallback) {
         var fileref = document.createElement('script');
@@ -172,49 +156,15 @@
         // load our other scripts because we know the Google and Map objects are available
         loadJS('/js/pointofinterest.js');
         loadJS('/js/uoy-map.js', "initPostLoad()");
-        loadJS('/js/map.js');
-        loadJS('/js/snazzy-info-window.js');
     }
 
     function initPostLoad() {
 
-        // add the open day global notice
-        uoy_map.addGlobalNotice({
-            placeBeforeElement: '.c-map-header',
-            title: '',
-            description: 'Here for Open Day? We\'ve got an <a href="https://www.york.ac.uk/map/open-day-map">Open Day Map</a> just for you',
-            noticeModifierClasses: 'c-global-notice--highlighted',
-            closeable: true
-        });
-
-        // plot special markers for open day
-        uoy_map.setPointsOfInterest([
-            {
-                title: 'Piazza Building',
-                lat: 53.9476135,
-                lon: -1.0280116
-            },
-            {
-                title: 'Ron Cooke Hub',
-                lat: 53.947226,
-                lon: -1.0297289
-            },
-            {
-                title: 'Spring Lane Building',
-                lat: 53.9476566,
-                lon: -1.0511597
-            },
-            {
-                title: 'Central Hall',
-                lat: 53.9469181,
-                lon: -1.0529672
-            },
-            {
-                title: 'Exhibition Centre',
-                lat: 53.9462674,
-                lon: -1.0533276
-            }
-        ]);
+        // largely just loads the mapconfig.json file for use about the place
+        // loads up any points of interest and global notices
+        uoy_map.init();
+        loadJS('/js/map.js');
+        loadJS('/js/snazzy-info-window.js');
     }
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBRU46Whb7IqeK2RW6SP4u69vDpCbTct8&libraries=places&callback=initCampusMaps" async defer></script>
