--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="shortcut icon" href="https://www.york.ac.uk/static/1.5/img/favicon.ico">
     <link rel="icon" type="image/x-icon" href="https://www.york.ac.uk/static/1.5/img/favicon.ico">
 
+    <link rel="manifest" href="manifest.json">
+
     <link rel="stylesheet" href="https://www.york.ac.uk/static/1.5/css/styles.min.css">
     <link rel="stylesheet" href="css/snazzy-info-window.css">
     <link rel="stylesheet" href="css/map.css">
