Geolocation error supression
Shut off the alert generated by the geolocation stuff as it was blocking the rest of the script from working.

Also implemented a softer, non-blocking error using our PL alert system

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
 
 <a href="#Main-Content" class="o-skip-link">Skip to content</a>
 
+<div class="c-alert c-alert--warning c-alert--dismissable is-hidden c-alert--overlay" role="alert" id="map-alert">
+    <button type="button" class="c-alert__close js-alert-close" aria-label="Close">&times;</button>
+    <div class="c-alert__content">
+
+    </div>
+</div>
+
 <div class="wrapper">
 
 <header class="c-map-header" role="banner">
