--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
       </div>
     </header>
     <div id="map" class="map"></div>
-    <div id="control-feedback-div" class="control-div control-div-feedback">
+    <div id="control-feedback-div" class="control-div control-div-feedback is-hidden">
       <div id="control-feedback-ui" class="control-ui--feedback" title="Click to send feedback">
         <div id="control-feedback-text" class="control-text">
           <p>Feedback</p>
         </div>
       </div>
     </div>
-    <div id="control-campus-div" class="control-div control-div-centre">
+    <div id="control-campus-div" class="control-div control-div-centre is-hidden">
       <div id="control-reset-ui" class="control-ui" title="Click to reset the map">
         <div id="control-reset-text" class="control-text">
           <p> <span class="is-hidden@small is-hidden@medium- ipad-fix">Reset map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
         </div>
       </div>
-      <div class="control-campus-div--campus-buttons">
+      <div id="control-campus-buttons" class="control-campus-div--campus-buttons is-hidden">
         <p>
           Centre the map on
         </p>
