Custom marker ordering
-Changed the Google Maps layer where the custom points of interest are rendered to show BELOW the current toggleable markers
- Removed some redundent html/js
- Swapped out the Typkit call for the default stylesheet link/rel version

--- a/index.html
+++ b/index.html
@@ -11,23 +11,12 @@
     <link rel="shortcut icon" href="https://www.york.ac.uk/static/1.5/img/favicon.ico">
     <link rel="icon" type="image/x-icon" href="https://www.york.ac.uk/static/1.5/img/favicon.ico">
     <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="https://use.typekit.net/dvj8rpp.css">
     <link rel="stylesheet" href="https://www.york.ac.uk/static/1.5/css/styles.min.css">
     <link rel="stylesheet" href="css/snazzy-info-window.css">
     <link rel="stylesheet" href="css/map.css">
     <script src="https://www.york.ac.uk/static/dev/js/modernizr.min.js"></script>
     <script src="https://www.york.ac.uk/static/dev/js/app.min.js"></script>
-
-    <!-- Typekit script -->
-    <script>
-        (function(d) {
-            var config = {
-                    kitId: 'dvj8rpp',
-                    scriptTimeout: 3000,
-                    async: true
-                },
-                h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-        })(document);
-    </script>
 </head>
 
 <body>
