Abstracted map title
Quick change to allow for the editing of the campus map title using the mapconfig.json file instead of hard coding per application.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="o-wrapper o-wrapper--wide o-grid">
         <div class="o-grid__row">
           <div class="o-grid__box o-grid__box--quarter o-grid__box--third@medium is-hidden@tiny is-hidden@small">
-            <h1 class="c-map-header__title">Campus map</h1>
+            <h1 id="c-map-header-title" class="c-map-header__title">Campus map</h1>
             <nav class="c-utility-nav js-accessible-nav" role="navigation" aria-label="Utility navigation">
               <ul class="c-utility-nav__list" role="menubar" aria-hidden="false">
                 <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="https://www.york.ac.uk/about/maps/"><u>Maps and directions</u></a></li>
