--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Campus map, University of York</title>
     <meta name="description" content="Use our interactive campus map to find your way around the University of York">
-    <link rel="shortcut icon" href="https://www.york.ac.uk/static/1.5/img/favicon.ico">
-    <link rel="icon" type="image/x-icon" href="https://www.york.ac.uk/static/1.5/img/favicon.ico">
+    <link rel="shortcut icon" href="https://www.york.ac.uk/static/1.5.6/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://www.york.ac.uk/static/1.5.6/img/favicon.ico">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://use.typekit.net/dvj8rpp.css">
-    <link rel="stylesheet" href="https://www.york.ac.uk/static/1.5/css/styles.min.css">
+    <link rel="stylesheet" href="https://www.york.ac.uk/static/1.5.6/css/styles.min.css">
     <link rel="stylesheet" href="css/snazzy-info-window.css">
     <link rel="stylesheet" href="css/map.css">
+
+    <!-- Note, these should be changed for the live version -->
     <script src="https://www.york.ac.uk/static/dev/js/modernizr.min.js"></script>
     <script src="https://www.york.ac.uk/static/dev/js/app.min.js"></script>
 </head>
