--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         </div>
       </div>
     </div>
-    <div id="control-campus-div" class="control-div control-div-centre is-hidden">
-      <div id="control-reset-ui" class="control-ui" title="Click to reset the map">
+    <div id="control-campus-div" class="control-campus-div control-div control-div-centre is-hidden">
+      <div id="control-reset-ui" class="control-ui control-reset-ui" title="Click to reset the map">
         <div id="control-reset-text" class="control-text">
           <p> <span class="is-hidden@small is-hidden@medium- ipad-fix">Reset map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
         </div>
