Final convert of campus map project to webpack

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,9 @@
     <link rel="icon" type="image/x-icon" href="https://www.york.ac.uk/static/1.5.6/img/favicon.ico">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://use.typekit.net/dvj8rpp.css">
-    <link rel="stylesheet" href="https://www.york.ac.uk/static/1.5.6/css/styles.min.css">
-    <link rel="stylesheet" href="css/snazzy-info-window.css">
-    <link rel="stylesheet" href="css/map.css">
 
-    <!-- Note, these should be changed for the live version -->
-    <script src="https://www.york.ac.uk/static/dev/js/modernizr.min.js"></script>
-    <script src="https://www.york.ac.uk/static/dev/js/app.min.js"></script>
+    <script src="https://www.york.ac.uk/static/1.5.6/js/modernizr.min.js"></script>
+    <script src="https://www.york.ac.uk/static/1.5.6/js/app.min.js"></script>
 </head>
 <body>
 
@@ -124,9 +120,6 @@
 
 </div>
 
-<script src="vendors.bundle.min.js"></script>
-<script src="map.bundle.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBRU46Whb7IqeK2RW6SP4u69vDpCbTct8&libraries=places&callback=initCampusMaps" async defer></script>
-
 </body>
 </html>
