--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Campus map, University of York</title>
     <meta name="description" content="Use our interactive campus map to find your way around the University of York">
-    <link rel="shortcut icon" href="https://www.york.ac.uk/static/1.5.6/img/favicon.ico">
-    <link rel="icon" type="image/x-icon" href="https://www.york.ac.uk/static/1.5.6/img/favicon.ico">
+    <link rel="shortcut icon" href="https://www.york.ac.uk/static/stable/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://www.york.ac.uk/static/stable/img/favicon.ico">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://use.typekit.net/dvj8rpp.css">
 
-    <script src="https://www.york.ac.uk/static/1.5.6/js/modernizr.min.js"></script>
-    <script src="https://www.york.ac.uk/static/1.5.6/js/app.min.js"></script>
+    <script src="https://www.york.ac.uk/static/stable/js/modernizr.min.js"></script>
+    <script src="https://www.york.ac.uk/static/stable/js/app.min.js"></script>
 </head>
 <body>
 
