Mapbox refactoring - WIP

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://use.typekit.net/dvj8rpp.css">
 
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js"></script>
+    
     <script src="https://www.york.ac.uk/static/stable/js/modernizr.min.js"></script>
     <script src="https://www.york.ac.uk/static/stable/js/app.min.js"></script>
 </head>
@@ -64,44 +67,46 @@
         </div>
       </div>
     </header>
-    <div id="map" class="map"></div>
-    <div id="control-feedback-div" class="control-div control-div-feedback is-hidden">
-      <div id="control-feedback-ui" class="control-ui--feedback" title="Click to send feedback">
-        <div id="control-feedback-text" class="control-text">
-          <p>Feedback</p>
-        </div>
-      </div>
-    </div>
-    <div id="control-campus-div" class="control-campus-div control-div control-div-centre is-hidden">
-      <div id="control-reset-ui" class="control-ui control-reset-ui" title="Click to reset the map">
-        <div id="control-reset-text" class="control-text">
-          <p> <span class="is-hidden@small is-hidden@medium- ipad-fix">Reset map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
-        </div>
-      </div>
-      <div id="control-campus-buttons" class="control-campus-div--campus-buttons is-hidden">
-        <p>
-          Centre the map on
-        </p>
-        <div id="control-east-ui" class="control-ui" title="Centre on Campus West">
-          <div id="control-east-text" class="control-text">
-            Campus East
+    <div class="map-wrapper">
+      <div id="map" class="map"></div>
+      <div id="control-feedback-div" class="control-div control-div-feedback is-hidden">
+          <div id="control-feedback-ui" class="control-ui--feedback" title="Click to send feedback">
+              <div id="control-feedback-text" class="control-text">
+                  <p>Feedback</p>
+              </div>
           </div>
-        </div>
-        <div id="control-west-ui" class="control-ui" title="Centre on Campus East">
-          <div id="control-west-text" class="control-text">
-            Campus West
-          </div>
-        </div>
-        <div id="control-km-ui" class="control-ui" title="Centre on King's Manor">
-          <div id="control-km-text" class="control-text">
-            King's Manor
-          </div>
-        </div>
       </div>
-    </div>
-    <div class="infoPanel">
-      <a href="#" class="closeInfoPanel"><i class="c-icon c-icon--close"></i></a>
-      <div class="infoPanel__content"></div>
+      <div id="control-campus-div" class="control-campus-div control-div control-div-centre is-hidden">
+          <div id="control-reset-ui" class="control-ui control-reset-ui" title="Click to reset the map">
+              <div id="control-reset-text" class="control-text">
+                  <p> <span class="is-hidden@small is-hidden@medium- ipad-fix">Reset map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
+              </div>
+          </div>
+          <div id="control-campus-buttons" class="control-campus-div--campus-buttons is-hidden">
+              <p>
+                  Centre the map on
+              </p>
+              <div id="control-east-ui" class="control-ui" title="Centre on Campus West">
+                  <div id="control-east-text" class="control-text">
+                      Campus East
+                  </div>
+              </div>
+              <div id="control-west-ui" class="control-ui" title="Centre on Campus East">
+                  <div id="control-west-text" class="control-text">
+                      Campus West
+                  </div>
+              </div>
+              <div id="control-km-ui" class="control-ui" title="Centre on King's Manor">
+                  <div id="control-km-text" class="control-text">
+                      King's Manor
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="infoPanel">
+          <a href="#" class="closeInfoPanel"><i class="c-icon c-icon--close"></i></a>
+          <div class="infoPanel__content"></div>
+      </div>
     </div>
     <footer class="footer">
       <div class="bar">
@@ -120,6 +125,9 @@
 
 </div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBRU46Whb7IqeK2RW6SP4u69vDpCbTct8&libraries=places&callback=initCampusMaps" async defer></script>
+<script>
+    initCampusMaps();
+</script>
+
 </body>
 </html>
