--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,11 @@
     <link rel="stylesheet" href="https://use.typekit.net/dvj8rpp.css">
     <link rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css">
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js"></script>
-    <link rel="stylesheet" href="https://www.york.ac.uk/static/stable/css/styles.min.css" media="screen">
-    <script src="https://www.york.ac.uk/static/stable/js/modernizr.min.js"></script>
-    <script src="https://www.york.ac.uk/static/stable/js/app.min.js"></script>
+    <!-- <link rel="stylesheet" href="https://www.york.ac.uk/static/stable/css/styles.min.css" media="screen"> -->
+    <link rel="stylesheet" href="https://www.york.ac.uk/preview/pattern-library/css/styles.min.css" media="screen">
+    <link rel="stylesheet" href="<script src="https://www.york.ac.uk/static/stable/js/modernizr.min.js"></script>
+    <!-- <script src="https://www.york.ac.uk/static/stable/js/app.min.js"></script> -->
+    <script src="https://www.york.ac.uk/preview/pattern-library/js/app.min.js"></script>
 </head>
 <body>
 
