--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
               <fieldset>
                 <div class="c-form__element">
                   <i class="c-icon c-icon--search"></i>
-                  <input class="c-form__input c-form__input--text" type="search" id="map-search-query" name="search-query" autocomplete="off" />
+                  <input class="c-form__input c-form__input--text" type="search" id="map-search-query" name="search-query" autocomplete="off" aria-label="Search the campus map"/>
                   <div class="c-autocomplete">
                     <ul class="c-autocomplete__list">
                     </ul>
@@ -65,7 +65,7 @@
             </form>
           </div>
           <div class="o-grid__box o-grid__box--quarter o-grid__box--third@medium  o-grid__box--third@small o-grid__box--third@tiny">
-            <a href="https://www.york.ac.uk/"><img class="c-main-header__logo" src="https://www.york.ac.uk/static/dev/img/logo-white.svg" alt="University of York"></a>
+            <a class="c-main-header__logo" href="https://www.york.ac.uk/"><img src="https://www.york.ac.uk/static/dev/img/logo-white.svg" alt="University of York"></a>
           </div>
         </div>
       </div>
