--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
             <h1 id="c-map-header-title" class="c-map-header__title">Campus map</h1>
             <nav class="c-utility-nav js-accessible-nav" role="navigation" aria-label="Utility navigation">
               <ul class="c-utility-nav__list" role="menubar" aria-hidden="false">
-                <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="https://www.york.ac.uk/about/maps/"><u>Maps and directions</u></a></li>
+                <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="https://www.york.ac.uk/about/transport-maps-parking/"><u>Maps and directions</u></a></li>
               </ul>
             </nav>
           </div>
